src/main/java/com/example/AntiFraudSystem/errors/AddressNotFoundException.java
package com.example.AntiFraudSystem.errors;

public class AddressNotFoundException extends RuntimeException{

    public AddressNotFoundException(String message) {
        super(message);
    }
}
